--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ website: http://ob-mc.net
 name: OBWizardFun
 author: Fahrenheit451
 version: 1.0
-api-version: 1.20
+api-version: "1.21"
 main: net.obmc.OBWizardFun.OBWizardFun
 description: Pesky wizards casting random spells on players
 commands:
