--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,13 @@
   </properties>
   
   <build>
-  
     <finalName>${project.name}</finalName>
  
     <plugins>
     	<plugin>
         	<groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.1</version>
+            <version>3.13.0</version>
             <configuration>
             	<source>21</source>
             	<target>21</target>
@@ -31,16 +30,16 @@
 
   <repositories>
     <repository>
-      <id>spigot-repo</id>
-      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+      <id>papermc</id>
+      <url>https://repo.papermc.io/repository/maven-public/</url>
     </repository>
   </repositories>
 
   <dependencies>
     <dependency>
-      <groupId>org.spigotmc</groupId>
-      <artifactId>spigot-api</artifactId>
-      <version>1.21-R0.1-SNAPSHOT</version>
+      <groupId>io.papermc.paper</groupId>
+      <artifactId>paper-api</artifactId>
+      <version>1.21.3-R0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
   
