--- a/pom.xml
+++ b/pom.xml
@@ -3,29 +3,49 @@
 
   <groupId>net.obmc</groupId>
   <artifactId>OBWizardFun</artifactId>
-  <version>1.0</version>
-  <packaging>jar</packaging>
   <name>OBWizardFun</name>
+  <version>1.14</version>
   <description>Pesky wizards casting random spells on players</description>
+  <url>http://ob-mc.net</url>
+  <packaging>jar</packaging>
   
   <properties>
+    <api-version>1.21</api-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
   <build>
-    <finalName>${project.name}</finalName>
+
+    <finalName>${project.name}-${project.version}</finalName>
  
+    <!-- ensure plugin.yml gets the tags updated -->
+    <resources>
+      <resource>
+        <targetPath>.</targetPath>
+        <filtering>true</filtering>
+        <directory>${basedir}/src/main/resources/</directory>
+        <includes>
+          <include>*.yml</include>
+        </includes>
+      </resource>
+    </resources>
+
     <plugins>
-    	<plugin>
-        	<groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.13.0</version>
-            <configuration>
-            	<source>21</source>
-            	<target>21</target>
-            </configuration>
-        </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.13.0</version>
+        <configuration>
+          <source>21</source>
+          <target>21</target>
+          <compilerArgs>
+            <arg>-Xlint:-options</arg>
+            <arg>-proc:full</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
     </plugins>
+  
   </build>
 
   <repositories>
@@ -39,7 +59,7 @@
     <dependency>
       <groupId>io.papermc.paper</groupId>
       <artifactId>paper-api</artifactId>
-      <version>1.21.3-R0.1-SNAPSHOT</version>
+      <version>1.21.4-R0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
   
